# nexorvivens-saphire

./: .env.example  .gitignore  CONFIGURATION.md  Cargo.toml  Dockerfile  INSTALL.md  LICENSE  README.md  docker-compose.standalone.yml  docker-compose.yml  factory_defaults.toml  fix_blank_lines.py  fix_comment_blanks.py  saphire.toml  translate_comments.py  translate_full.py  translate_lines.py
config/: factory_defaults.toml  saphire.toml
config/personalities/: artiste.toml  aventurier.toml  default.toml  empathique.toml  mentor.toml  mystique.toml  philosophe.toml  rebelle.toml  saphire.toml  scientifique.toml  stoique.toml
config/profiles/: anxiete.toml  autisme.toml  bipolaire.toml  hpi.toml  neurotypique.toml  tdah-hyperactif.toml  tdah-inattentif.toml  tdah.toml  toc.toml
nginx/: nginx.conf
personalities/: artiste.toml  aventurier.toml  empathique.toml  mentor.toml  mystique.toml  philosophe.toml  rebelle.toml  saphire.toml  scientifique.toml  stoique.toml
profiles/: anxiete.toml  autisme.toml  bipolaire.toml  hpi.toml  neurotypique.toml  tdah-hyperactif.toml  tdah-inattentif.toml  tdah.toml  toc.toml
prompts/: genesis.txt
scripts/monitoring/: gpu-watchdog.service  gpu-watchdog.sh  (+6 more)
sql/: migrate_embeddings_768.sql  schema.sql  schema_logs.sql
src/: consciousness.rs  consensus.rs  display.rs  emotions.rs  factory.rs  lib.rs  llm.rs  main.rs  metacognition.rs  neurochemistry.rs  pipeline.rs  scenarios.rs  stimulus.rs  temperament.rs
static/: app.js  auth.js  brain-map.html  dashboard.html  i18n.js  index.html  pipeline-editor.html  style.css
(+282 files in other folders)
