[package]
name = "saphire"
version = "1.0.0"
edition = "2021"
description = "Saphire — Autonomous Cognitive Agent"
license = "NAGL-1.0"
repository = "https://github.com/JRM73/nexorvivens-saphire"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = "2"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "signal", "time"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
deadpool-postgres = "0.14"
pgvector = { version = "0.4", features = ["postgres"] }
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
